Keys: Fixed subtree-toggle w TAB in dirvish (reorganized)

--- a/README.org
+++ b/README.org
@@ -9,9 +9,9 @@
 - [[#straight-configuration--package-repositories][Straight Configuration + Package Repositories]]
 - [[#mac-settings][Mac Settings]]
 - [[#generalel][General.el]]
-- [[#dired][Dired]]
-- [[#git][Git]]
 - [[#key-binds][Key binds]]
+- [[#git][Git]]
+- [[#dired][Dired]]
 - [[#mini-buffer][Mini buffer]]
 - [[#org-mode][Org Mode]]
   - [[#base-evil-org][Base Evil Org]]
@@ -105,56 +105,6 @@
       :prefix "SPC"
       :global-prefix "C-SPC"))
 #+end_src
-* Dired
-#+begin_src emacs-lisp :tangle init.el 
-  (add-hook 'dired-mode-hook (lambda () dired-hide-details-mode))
-
-  (use-package all-the-icons :straight t)
-
-  (use-package dirvish
-     :custom
-  (dirvish-quick-access-entries ; It's a custom option, `setq' won't work
-   '(("h" "~/"                          "Home")
-     ("d" "~/Downloads/"                "Downloads")
-     ("D" "~/Developer/"                "Developer")
-     ))
-    :config
-    (setq dirvish-mode-line-format
-          '(:left (sort symlink) :right (omit yank index)))
-    (setq dirvish-attributes
-          '(all-the-icons file-time file-size collapse subtree-state vc-state git-msg))
-    (setq insert-directory-program "gls" dired-use-ls-dired t)     ;; needs coreutils: 'brew install coreutils'
-    (setq dired-listing-switches "-al --group-directories-first")  ;; needs coreutils: 'brew install coreutils' 
-    :init
-    (dirvish-override-dired-mode))
-#+end_src
-* Git
-#+begin_src emacs-lisp :tangle init.el 
-  (use-package magit
-    :ensure t
-    :general
-    (setq magit-status-buffer-switch-function 'switch-to-buffer))
-  (add-hook 'git-commit-mode-hook 'evil-insert-state)
-
-  (use-package git-gutter
-    :hook (prog-mode . git-gutter-mode) (org-mode . git-gutter-mode)
-    :config
-    (setq git-gutter:update-interval 0.02))
-
-  (use-package git-gutter-fringe
-    :config
-    (define-fringe-bitmap 'git-gutter-fr:added [224] nil nil '(center repeated))
-    (define-fringe-bitmap 'git-gutter-fr:modified [224] nil nil '(center repeated))
-    (define-fringe-bitmap 'git-gutter-fr:deleted [128 192 224 240] nil nil 'bottom))
-
-  (defun ramon/template-insert-gitignore()
-    "Insert .gitignore for specified language"
-    (interactive)
-    (let* ((dir (concat "~/.emacs.d/" "templates/gitignore/"))
-           (files (directory-files dir nil ".*\\.gitignore"))
-           (pick (yas-choose-value (mapcar #'file-name-sans-extension files))))
-      (insert-file-contents (concat dir (concat pick ".gitignore")))))
-#+end_src
 * Key binds
 #+begin_src emacs-lisp :tangle init.el 
   (global-set-key (kbd "M-/") 'comment-line)
@@ -206,6 +156,64 @@
     :straight t)
 #+end_src
 
+* Git
+#+begin_src emacs-lisp :tangle init.el 
+  (use-package magit
+    :ensure t
+    :general
+    (setq magit-status-buffer-switch-function 'switch-to-buffer))
+  (add-hook 'git-commit-mode-hook 'evil-insert-state)
+
+  (use-package git-gutter
+    :hook (prog-mode . git-gutter-mode) (org-mode . git-gutter-mode)
+    :config
+    (setq git-gutter:update-interval 0.02))
+
+  (use-package git-gutter-fringe
+    :config
+    (define-fringe-bitmap 'git-gutter-fr:added [224] nil nil '(center repeated))
+    (define-fringe-bitmap 'git-gutter-fr:modified [224] nil nil '(center repeated))
+    (define-fringe-bitmap 'git-gutter-fr:deleted [128 192 224 240] nil nil 'bottom))
+
+  (defun ramon/template-insert-gitignore()
+    "Insert .gitignore for specified language"
+    (interactive)
+    (let* ((dir (concat "~/.emacs.d/" "templates/gitignore/"))
+           (files (directory-files dir nil ".*\\.gitignore"))
+           (pick (yas-choose-value (mapcar #'file-name-sans-extension files))))
+      (insert-file-contents (concat dir (concat pick ".gitignore")))))
+#+end_src
+* Dired
+#+begin_src emacs-lisp :tangle init.el 
+  (add-hook 'dired-mode-hook (lambda () dired-hide-details-mode))
+
+  (use-package all-the-icons :straight t)
+
+  (use-package dirvish
+     :custom
+  (dirvish-quick-access-entries ; It's a custom option, `setq' won't work
+   '(("h" "~/"                          "Home")
+     ("d" "~/Downloads/"                "Downloads")
+     ("D" "~/Developer/"                "Developer")
+     ))
+    :config
+    (setq dirvish-mode-line-format
+          '(:left (sort symlink) :right (omit yank index)))
+    (setq dirvish-attributes
+          '(all-the-icons file-time file-size collapse subtree-state vc-state git-msg))
+    (setq insert-directory-program "gls" dired-use-ls-dired t)     ;; needs coreutils: 'brew install coreutils'
+    (setq dired-listing-switches "-al --group-directories-first")  ;; needs coreutils: 'brew install coreutils' 
+    :init
+    (dirvish-override-dired-mode))
+
+  ;; (general-define-key
+  ;;  :states 'override
+  ;;  :keymaps 'dirvish-mode-map
+  ;;  "TAB" 'dirvish-subtree-toggle
+  ;; )
+
+  (evil-define-key 'normal dirvish-mode-map (kbd "TAB") 'dirvish-subtree-toggle)
+#+end_src
 * Mini buffer
 #+begin_src emacs-lisp :tangle init.el 
 (use-package vertico
@@ -721,6 +729,7 @@
 
   (setq max-lisp-eval-depth 10000)  ;; Debugging 
   ;; (setq debug-on-error t)           ;; Debugging 
+  ;; (setq debug-on-message "Package cl is deprecated")
 
   (eldoc-mode -1)
   (save-place-mode 1)
